# enyalien

./: .gitignore  Dockerfile  README.md  docker-compose.yml  enyalien.db  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  routes.py
app/static/js/: app.js
app/templates/: add.html  base.html  deck_cards.html  decks.html  edit.html  index.html  list.html  login.html  register.html  review.html  shared_decks.html
app/templates/components/: card_answer.html  card_face.html  review_empty.html
scripts/: backup_db.py  reset_db.py  seed_amino_acids.py
tests/: test_features.py  test_srs.py
