[project]
name = "enyalien"
version = "0.1.0"
description = "Web app for helping to memorized words"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "markdown>=3.6",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
